LEPL-23: промежуточные изменения по таске. Начал корректировать TimeSlotController.
