# api-gateway/src/main/java/ru/mentor/mapper/MentorTimeSlotDtoMapper.java
@@ -1,0 +1,9 @@
+package ru.mentor.mapper;
+
+import org.mapstruct.Mapper;
+import ru.mentor.gateway.model.MentorTimeSlotDto;
+
+@Mapper(componentModel = "spring")
+public interface MentorTimeSlotDtoMapper {
+    MentorTimeSlotDto toApiDto(ru.mentor.dto.MentorTimeSlotDto mentorTimeSlotDto);
+}
